third_party/move/move-compiler/tests/move_check/expansion/access_specifier_not_supported.exp
error[E01013]: unsupported language construct
  ┌─ tests/move_check/expansion/access_specifier_not_supported.move:8:14
  │
8 │     fun f2() reads S {
  │              ^^^^^ Move 2 language construct is not enabled: access specifiers

error[E01013]: unsupported language construct
   ┌─ tests/move_check/expansion/access_specifier_not_supported.move:11:14
   │
11 │     fun f3() writes S {
   │              ^^^^^^ Move 2 language construct is not enabled: access specifiers

